--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,16 @@
             <artifactId>google-api-translate-java</artifactId>
             <version>0.92</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.17</version>
+        </dependency>
+        <dependency>
+            <groupId>com.atlassian.clover</groupId>
+            <artifactId>clover</artifactId>
+            <version>4.0.6</version>
+        </dependency>
     </dependencies>
 
 
