--- a/pom.xml
+++ b/pom.xml
@@ -84,10 +84,11 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.5</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
         <dependency>
-            <groupId>com.google</groupId>
+            <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.6.2</version>
+            <version>2.8.6</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
